# mediSnap

./: cabal.project  hie.yaml  medisnap-validators.cabal
app/: TokenNameHex.hs  TokenPolicy.hs
scripts/: lock-nft-to-script.sh  mint-nft.sh  queryUtxos.sh  unlock-from-script.sh
src/: Utils.hs
src/Asset/: Deploy.hs  Purchase.hs  Trace.hs  Vesting.hs
src/Common/: Utils.hs
src/Nft/: Mint.hs
token/: metadata.json
token/lock/: mds-lock.addr  mds-lock.plutus  script.addr  tx.raw  tx.signed
token/mint/: mds-mint.plutus  metadata.json  tx.signed  tx.unsigned
token/unlock/: tx.body  tx.signed
wallets/beneficiary/: beneficiary.addr  beneficiary.skey  beneficiary.vkey
wallets/buyer/: buyer.addr  buyer.skey  buyer.vkey
wallets/minter/: minter.addr  minter.skey  minter.vkey
wallets/seller/: seller.addr  seller.skey  seller.vkey
