Cabal-Version:      3.0
Name:               medisnap-validators 
Version:            0.1.0.0
Author:             Kelly Muhindi 
Maintainer:          kmuhindi@proton.me or muhindi.kn@gmail.com
Build-Type:          Simple
License-files:       LICENSE

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Asset.Purchase 
      Asset.Deploy
    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      bytestring -any,
      containers -any,
      freer-extras -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      text -any,
      lens -any,
      playground-common,
    hs-source-dirs: src

executable token-policy
  main-is: TokenPolicy.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , medisnap-validators                     ,

executable token-name-hex 
  main-is: TokenNameHex.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , medisnap-validators


