Cabal-Version:      3.0
Name:               medisnap-validators 
Version:            0.1.0.0
Author:             Kelly Muhindi 
Maintainer:          kmuhindi@proton.me or muhindi.kn@gmail.com
Build-Type:          Simple
License-files:       LICENSE

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Asset.Purchase 
      Asset.Deploy
      Utils
      Nft.Mint
      Asset.Vesting
      Asset.Trace
    other-modules:
      Common.Utils

    build-depends:
                      aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , cardano-ledger-shelley
                     , cardano-wallet-core
                     , containers
                     , data-default
                     , freer-extras
                     , openapi3
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-pab
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , serialise
                     , text 
                     , hex
    hs-source-dirs: src

executable token-policy
  main-is: TokenPolicy.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , medisnap-validators                     ,

executable token-name-hex 
  main-is: TokenNameHex.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , medisnap-validators


